--- a/index.html
+++ b/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git and GitHub Difference</title>
 </head>
 <body>
-    <p>hello world</p>
+    <table>
+        <tr>
+            <th>Git</th>
+            <th>GitHub</th>
+        </tr>
+        <tr>
+            <th>Git is software.</th>
+            <th>It is a service.</th>
+        </tr>
+        <tr>
+            <th>Linux maintains Git.</th>
+            <th>Microsoft maintains GitHub.</th>
+        </tr>
+        <tr>
+            <th>It is a command-line tool.</th>
+            <th>It is a graphical user interface.</th>
+        </tr>
+        <tr>
+            <th>You can install it locally on the system.</th>
+            <th>It is hosted on the web. It is exclusively cloud-based.</th>
+        </tr>
+        <tr>
+            <th>It is a VCS to manage source code history.</th>
+            <th>It focuses on centralized source code hosting.</th>
+        </tr>
+        <tr>
+            <th>It lacks a user management feature.</th>
+            <th>It has a built-in user management feature.</th>
+        </tr>
+        <tr>
+            <th>Git was launched in 2005.</th>
+            <th>GitHub was released in 2008.</th>
+        </tr>
+        <tr>
+            <th>Git has minimum external tool configuration.</th>
+            <th>It has an active marketplace for tool integration.</th>
+        </tr>
+        <tr>
+            <th>It is open-source licensed.</th>
+            <th>It has a free-tier and pay-for-use tier.</th>
+        </tr>
+        <tr>
+            <th>Its desktop interface is named Git Gui.</th>
+            <th>Its desktop interface is named GitHub Desktop.</th>
+        </tr>
+
+    </table>
+
+    
 </body>
 </html>
