--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table class="table table-bordered">
         <tr>
-            <th>Git</th>
+            <th>aGit</th>
             <th>GitHub</th>
         </tr>
         <tr>
