--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <table class="table table-bordered">
+    <table class="table table-bordered" class="table table-responsive">
         <tr>
-            <th>aGit</th>
+            <th>Git</th>
             <th>GitHub</th>
         </tr>
         <tr>
