--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </tr>
         <tr>
             <th>Linux maintains Git.</th>
-            <th>Microsoft maintains GitHub.</th>
+            <th>Microsoft amaintains GitHub.</th>
         </tr>
         <tr>
             <th>It is a command-line tool.</th>
