--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <table class="table table-bordered" class="table table-responsive">
+    <table class="table table-bordered">
         <tr>
-            <th>Git</th>
-            <th>GitHub</th>
+            <th class="text-center">Git</th>
+            <th class="text-center">GitHub</th>
         </tr>
         <tr>
-            <th>Git is software.</th>
-            <th>It is a service.</th>
+            <th class="text-center">Git is software.</th>
+            <th class="text-center">It is a service.</th>
         </tr>
         <tr>
-            <th>Linux maintains Git.</th>
-            <th>Microsoft amaintains GitHub.</th>
+            <th class="text-center">Linux maintains Git.</th>
+            <th class="text-center">Microsoft maintains GitHub.</th>
         </tr>
         <tr>
-            <th>It is a command-line tool.</th>
-            <th>It is a graphical user interface.</th>
+            <th class="text-center">It is a command-line tool.</th>
+            <th class="text-center">It is a graphical user interface.</th>
         </tr>
         <tr>
-            <th>You can install it locally on the system.</th>
-            <th>It is hosted on the web. It is exclusively cloud-based.</th>
+            <th class="text-center">You can install it locally on the system.</th>
+            <th class="text-center">It is hosted on the web. It is exclusively cloud-based.</th>
         </tr>
         <tr>
-            <th>It is a VCS to manage source code history.</th>
-            <th>It focuses on centralized source code hosting.</th>
+            <th class="text-center">It is a VCS to manage source code history.</th>
+            <th class="text-center">It focuses on centralized source code hosting.</th>
         </tr>
         <tr>
-            <th>It lacks a user management feature.</th>
-            <th>It has a built-in user management feature.</th>
+            <th class="text-center">It lacks a user management feature.</th>
+            <th class="text-center">It has a built-in user management feature.</th>
         </tr>
         <tr>
-            <th>Git was launched in 2005.</th>
-            <th>GitHub was released in 2008.</th>
+            <th class="text-center">Git was launched in 2005.</th>
+            <th class="text-center">GitHub was released in 2008.</th>
         </tr>
         <tr>
-            <th>Git has minimum external tool configuration.</th>
-            <th>It has an active marketplace for tool integration.</th>
+            <th class="text-center">Git has minimum external tool configuration.</th>
+            <th class="text-center">It has an active marketplace for tool integration.</th>
         </tr>
         <tr>
-            <th>It is open-source licensed.</th>
-            <th>It has a free-tier and pay-for-use tier.</th>
+            <th class="text-center">It is open-source licensed.</th>
+            <th class="text-center">It has a free-tier and pay-for-use tier.</th>
         </tr>
         <tr>
-            <th>Its desktop interface is named Git Gui.</th>
-            <th>Its desktop interface is named GitHub Desktop.</th>
+            <th class="text-center">Its desktop interface is named Git Gui.</th>
+            <th class="text-center">Its desktop interface is named GitHub Desktop.</th>
         </tr>
 
     </table>
