--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <th class="text-center">It focuses on centralized source code hosting.</th>
         </tr>
         <tr>
-            <th class="text-center">It lacks a user management feature.</th>
+            <th class="text-center">It lacks aa user management feature.</th>
             <th class="text-center">It has a built-in user management feature.</th>
         </tr>
         <tr>
